<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UrbApp</string>
    <string name="action_settings">Settings</string>
    <string name="homeFragment">Home</string>
    <string name="definitionFragment">Specify surface</string>
    <string name="saveFragment">Save and Sync</string>
    <string name="zoneFragment">Draw surfaces</string>
    <string name="informationFragment">Information</string>

    <string name="export_material">Load list of materials from server</string>

    <string name="syncMatAndTypes">aller dans values/string-en pour changer ce texte</string>
    <string name="image_newProject">Image : new project</string>
    <string name="image_newProject_takePhoto">Image : new project</string>
    <string name="image_newProject_photo">Image : new project</string>
    <string name="takePicture">Take a picture</string>
    <string name="loadPicture">Load a picture</string>
    <string name="image_loadLocalProject">Image : Load local project</string>
    <string name="loadLocalProject">Load local project</string>
    <string name="image_loadDistantProject">Image : load external project</string>
    <string name="loadDistantlProject">Load external project</string>
    
    <string name="fragmentName">Name</string>
    <string name="param">Settings</string>
    <string name="save">Save</string>

    <string name="zone_create">Create</string>
    <string name="zone_create_dialog">Superimpose surfaces ?</string>
    <string name="zone_create_intersect">Subtract surface from others - No overlapping</string>
    <string name="zone_create_add">Raw add - Overlapping</string>
    <string name="zone_delete">Delete</string>
    <string name="zone_edit">Edit</string>
    
    <string name="definition_select">Select</string>
    <string name="definition_define">Define attributes</string>
    <string name="definition_delete">Reset</string>
    <string name="definition_union">Group</string>
    <string name="definition_union_strong">Permanent merge</string>
    <string name="definition_union_weak">Associate</string>
    <string name="definition_union_strong_description">Merge surfaces into one single surface. non-reversible.</string>
    <string name="definition_union_weak_description">Group surfaces. Then chose specification only once.</string>
    <string name="definition_divide">Degroup</string>
    <string name="definition_recap">Summary</string>
    <string name="definition_select_text">Click to select a surface.</string>
    
    <string name="info_text_author">Autor:</string>
    <string name="info_text_description">Picture info:</string>
    <string name="info_text_project">Project Name:</string>
    <string name="info_text_project_hint">Type a name or tick an existing one.</string>
    <string name="info_text_adress">Adress:</string>
    <string name="info_text_void"></string>
    <string name="info_edit_author">Autor *</string>
    <string name="info_edit_description">Description *</string>
    <string name="info_edit_project">Project *</string>
    <string name="info_edit_adress">Adress *</string>
    <string name="info_edit_complement">adress *</string>
    <string name="info_button_geo">Location</string>
    
    <string name="save_textStatus">None</string>
    <string name="save_buttonSync">Synchronize</string>
    <string name="back">Revert last</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="validate">Validate</string>
    <string name="zone_edit_button_delete_point">Delet point</string>
    <string name="zone_edit_button_release_point">Drop point</string>
    
    <string name="type">Type</string>
    <string name="materials">Material</string>
    <string name="color">Color</string>
    <string name="not_defined">Undefined</string>
    <string name="definition_dialog_title">Define surface attributes:</string>
    <string name="definition_dialog_type">Surface type :</string>
    <string name="definition_dialog_material">Surface material :</string>
    <string name="definition_dialog_color">Area color :</string>
    <string name="ok">OK</string>
    <string name="information_about_frontage">surface information</string>
    <string name="satellite">satellite</string>
    <string name="plan">map</string>
	<string name ="topology_exception">TopologyException</string>
    <string name="nullString"></string>
    
    <string name="hybrid">hybrid</string>
	<string name="confirm">Validate</string>
	<string name="confirm_photo">Are you sure you want to start a new project ?</string>
    <string name="confirm_photo_msg">Current project data will be lost.</string>
	<string name="progress_dialog_title_connecting">Uploading started...</string>
	<string name="upload_error_title">Upload error</string>
	<string name="upload_error_message">Uploading failed</string>
	<string name="retry">Retry</string>
	<string name="upload_success_title">Successfully uploaded</string>
	<string name="upload_success_message">bravo !</string>
	<string name="success">OK</string>
	<string name="dialog_request_nbPoint">Select surface type :</string>
	<string name="progress_dialog_title_uploading">progress_dialog_title_uploading</string>
	<string name="no_back">Unable to revert</string>
	<string name="point_deleting_impossible">Unable to delete this point.</string>
	<string name="delete_zone">Delete area.</string>
	<string name="validation_not_available">Unable to validate. Check surface definition.</string>
	
	<string name="facade">Frontage (2 points)</string>
	<string name="sol">Ground Area (multiple points)</string>
    <string name="location">location</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="modify">Edit</string>

    <!-- Toasts in geoactivity -->

    <string name="not_enough_points">Please, define more points.</string>
    <string name="max_points">Maximum of points reached.</string>
    <string name="connection_lost">Connection lost...</string>
    <string name="disconnected">Disconnected. Please re-connect.</string>

    <!-- Toasts in load-external/local-photosactivity -->

    <string name="pic_loading">Picture loading...</string>

    <!-- toasts in LoadExternalProjectActivity -->

    <string name="double_click">Click again to load project</string>
    <string name="project_loading">Project loading...</string>

</resources>
